gcc/testsuite/gdc.test/fail_compilation/fail7861.d
module test;

mixin template A() {
import test;
}

struct B {
mixin A!();
}

enum C = B.nonexistent;

